--- a/arabic.html
+++ b/arabic.html
@@ -32,11 +32,11 @@
     nav a {
       color: white;
       text-decoration: none;
-      font-weight: bold;
+      font-weight: 700;
       padding: 10px 22px;
       border-radius: 25px;
-      background-color: rgba(255,255,255,0.15);
-      transition: 0.3s ease;
+      background-color: rgba(255 255 255 / 0.15);
+      transition: background-color 0.3s ease, transform 0.2s ease;
     }
     nav a:hover {
       background-color: #005f99;
@@ -45,20 +45,17 @@
     .container {
       max-width: 900px;
       background: white;
-      margin: 30px auto 60px auto;
+      margin: 30px auto;
       padding: 30px 25px;
       border-radius: 12px;
       box-shadow: 0 8px 20px rgba(0,0,0,0.12);
       line-height: 1.8;
     }
-    h1, h2, h3 {
-      color: #003344;
-    }
     img {
       display: block;
       max-width: 100%;
       margin: 25px auto;
-      border-radius: 12px;
+      border-radius: 15px;
       box-shadow: 0 6px 15px rgba(0,0,0,0.1);
     }
     footer {
@@ -67,18 +64,13 @@
       text-align: center;
       padding: 18px 15px;
       font-weight: 600;
-      letter-spacing: 0.03em;
-      margin-top: 40px;
-    }
-    p, li {
-      font-size: 1.1rem;
     }
   </style>
 </head>
 <body>
   <header>
     <h1>الضغط والاحتواء الكوني: إطار نظري</h1>
-    <p>كتابة: عثمان مدني، باحث مستقل، باكستان | البريد: madniusman13@gmail.com</p>
+    <p>كتابة: عثمان مدني، باحث مستقل، باكستان<br>البريد الإلكتروني: madniusman13@gmail.com</p>
   </header>
 
   <nav>
@@ -86,7 +78,6 @@
     <a href="urdu.html">اردو</a>
     <a href="arabic.html">عربي</a>
     <a href="argument.html">الجدل العلمي</a>
-    <a href="urdu-argument.html">دلائل</a>
   </nav>
 
   <div class="container">
@@ -97,92 +88,90 @@
 
     <h2>١. المقدمة</h2>
     <p>
-      في علم الكونيات الحديث، تُفسر البنية والحركة الكونية عمومًا وفقًا لقوانين الجاذبية كما وردت في النسبية العامة. ومع ذلك، فإن الملاحظات مثل التوسع المتسارع، أنماط دوران المجرات، واستقرار الهياكل الكونية الكبيرة تشير إلى الحاجة لنظريات بديلة. تقترح نظرية CPC أن الضغط الكوني المتوازن مع قوة احتواء خارجية هو ما يحكم استقرار الكون.
+      في علم الكون الحديث، تُفسّر البنية والحركة الكونية عادةً بواسطة الجاذبية النسبية. ومع ذلك، تشير المشاهدات مثل التوسع المتسارع، دوران المجرات، واستقرار البنى الضخمة إلى الحاجة إلى نماذج بديلة. تقترح CPC أن الضغط الكوني المتوازن مع الاحتواء مسؤول عن التوازن الكوني.
     </p>
 
-    <h2>٢. عشرة أدلة علمية تؤيد النظرية</h2>
+    <h2>٢. عشرة أدلة علمية تؤيد نظرية CPC</h2>
     <ol>
-      <li>استمرار التوسع الكوني: تشير حركة المجرات المتباعدة إلى وجود ضغط داخلي يدفعها، بدلاً من جذب الجاذبية فقط.</li>
-      <li>توازن الكون: بقاء الكون في حالة توازن يدل على وجود قوة احتواء منظمة، وإلا لتهاوى الكون بفعل الجاذبية فقط.</li>
-      <li>الثقوب السوداء والنجوم النيوترونية: مع أنها تتمتع بجاذبية قوية، إلا أن لها حدود تشير إلى وجود احتواء يكبح تمددها.</li>
-      <li>تماثل إشعاع الخلفية الكونية (CMBR): يشير إلى توزيع ضغط متساوٍ عبر الكون.</li>
-      <li>عدم توازن المادة والمادة المضادة: قد يكون ناتجًا عن تدخل فيزيائي للاحتواء في المراحل المبكرة من الكون.</li>
-      <li>ضغط الفراغ الكمومي: كما يُلاحظ في تأثير كازيمير، حتى الفراغ يحتوي على طاقة ضغط كامنة.</li>
-      <li>قصور نظريات الجاذبية: فشلها في التوحيد مع ميكانيكا الكم يفتح المجال لنظريات بديلة مثل CPC.</li>
-      <li>وجود حدود للكون: فكرة الاحتواء تفترض وجود حدود تضبط طاقة الكون ضمن نظام متوازن.</li>
-      <li>التشبيه المعماري: يشبه الكون فقاعة غاز محاطة بجدار يحفظ التوازن بين الداخل والخارج.</li>
-      <li>أنظمة الضغط في الطبيعة: مثل ضغط الدم والهواء والماء، مما يوضح أن الضغط مبدأ كوني طبيعي للتوازن.</li>
+      <li><strong>توسع الكون:</strong> المجرات تبتعد، مما يدل على وجود ضغط داخلي ضد الجاذبية.</li>
+      <li><strong>توازن البنية الكونية:</strong> الكون مستقر رغم قوى الجاذبية، مما يشير إلى احتواء منظم.</li>
+      <li><strong>الثقوب السوداء:</strong> حدود ابتلاعها تدل على قوة كبح من الاحتواء.</li>
+      <li><strong>تماثل إشعاع الخلفية:</strong> يعكس ضغطاً موحداً في جميع الاتجاهات.</li>
+      <li><strong>عدم توازن المادة/ضد المادة:</strong> يشير إلى تدخل ضغط احتوائي بعد الانفجار العظيم.</li>
+      <li><strong>ضغط الفراغ الكمومي:</strong> تأثير كازيمير يظهر طاقة ضغط حتى في الفراغ.</li>
+      <li><strong>فشل توحيد الجاذبية مع الكم:</strong> يدعم البحث عن نموذج بديل كـ CPC.</li>
+      <li><strong>حدود الكون:</strong> لا يمكن أن تكون لا نهائية بدون احتواء طاقي.</li>
+      <li><strong>تشبيه معماري:</strong> يشبه الكون فقاعة محاطة بجدار متوازن.</li>
+      <li><strong>أنظمة طبيعية تعتمد الضغط:</strong> من الدماغ إلى المحيطات، الضغط ضروري للتوازن.</li>
     </ol>
 
-    <h2>٣. انفجار الكون - سيناريو نظري</h2>
+    <h2>٣. انفجار كوني محتمل</h2>
     <p>
-      إذا تجاوز الضغط الداخلي قدرة الاحتواء الخارجي، قد يؤدي ذلك إلى انفجار شامل يدمر البنية الكونية.
+      إذا تجاوز الضغط الداخلي قدرة الاحتواء، فقد يحدث انفجار كوني شامل يؤدي إلى تدمير المادة والمجرات.
     </p>
 
-    <h2>٤. التأثير الأول - تفاعل المحيطات</h2>
+    <h2>٤. تأثير المحيطات</h2>
     <p>
-      الماء غير قابل للضغط، لذا فإن المحيطات ستكون أول من يتأثر بانفجار كوني محتمل.
+      باعتبار أن الماء غير قابل للانضغاط، ستكون المحيطات أول من يتأثر بانفجار كهذا، والتأثير سيكون مدمراً.
     </p>
 
     <h2>٥. توازن الأجسام في الفضاء</h2>
     <p>
-      وفقًا لـ CPC، فإن الأجسام لا تبقى معلقة في الفضاء بسبب الجاذبية وحدها، بل بسبب توازن ضغط محيط بها.
+      وفقاً لـ CPC، لا تبقى الأجسام عالقة في الفضاء بسبب الجاذبية فقط، بل بسبب توازن الضغط حولها.
     </p>
 
     <h2>٦. تأثير الضغط على الضوء</h2>
     <p>
-      يمكن أن تؤثر تدرجات الضغط على سرعة الضوء واتجاهه، مما يقدم تفسيرًا بديلاً للانزياح الأحمر والعدسات الجاذبية.
+      سرعة الضوء ومساره يمكن أن تتأثر بتدرجات الضغط، مما يفسر الانزياح الأحمر والعدسات الكونية بطريقة جديدة.
     </p>
 
     <h2>٧. المعادلات النظرية</h2>
-    <p><strong>معادلة التوازن:</strong> Pi × A = Fc × A ⇒ Pi = Fc</p>
-    <p><strong>ضغط مداري:</strong> Pr(r) = P₀ / (1 + k r²)</p>
-    <p><strong>الانزياح الأحمر بفعل الضغط:</strong> Δλ ∝ ∇P · d</p>
-
-    <h2>٨. قصور النظريات السائدة</h2>
     <ul>
-      <li>النسبية العامة: تعتمد على الطاقة المظلمة لتفسير التوسع.</li>
-      <li>الجاذبية النيوتونية: تفشل في تفسير الظواهر الكونية الكبرى.</li>
-      <li>نماذج الطاقة المظلمة: تقوم على فرضيات غير مرئية.</li>
-      <li>نظرية الأوتار: معقدة وتفتقر لأدلة تجريبية قوية.</li>
+      <li><strong>التوازن:</strong> Pi × A = Fc × A ⇒ Pi = Fc</li>
+      <li><strong>الضغط المداري:</strong> Pr(r) = P₀ / (1 + k r²)</li>
+      <li><strong>الانزياح الأحمر:</strong> Δλ ∝ ∇P · d</li>
+    </ul>
+
+    <h2>٨. قصور النظريات الحالية</h2>
+    <ul>
+      <li>النسبية العامة تعتمد على الطاقة المظلمة لتفسير التوسع.</li>
+      <li>الجاذبية النيوتونية تفشل في المقاييس الكونية.</li>
+      <li>نماذج الطاقة المظلمة تفتقر للأدلة التجريبية.</li>
+      <li>نظرية الأوتار معقدة ولا تقدم نتائج واضحة.</li>
     </ul>
 
     <h2>٩. مزايا نظرية CPC</h2>
     <ul>
-      <li>تفسر التوسع الكوني بدون اللجوء إلى الطاقة المظلمة.</li>
+      <li>تفسير التوسع الكوني دون طاقة مظلمة.</li>
       <li>خالية من التفردات (singularities).</li>
-      <li>مبنية على تشبيهات حقيقية من الطبيعة.</li>
+      <li>مدعومة بتشبيهات من الطبيعة المعروفة.</li>
     </ul>
 
-    <h2>١٠. الخاتمة</h2>
-    <p>
-      توفر نظرية الضغط والاحتواء الكوني نموذجًا جديدًا لفهم الكون، يتجاوز أوجه القصور في نظريات الجاذبية التقليدية ويعتمد على مبدأ الضغط كمفهوم أساسي للتوازن.
-    </p>
-
-    <h2>١١. المراجع</h2>
+    <h2>١٠. المراجع</h2>
     <ul>
-      <li>Misner, Thorne, & Wheeler (1973) - Gravitation</li>
-      <li>Padmanabhan (1993) - Structure Formation in the Universe</li>
-      <li>Peebles (1993) - Principles of Physical Cosmology</li>
-      <li>Riess et al. (1998) - Supernova Evidence for Accelerating Universe</li>
-      <li>Verlinde (2017) - Emergent Gravity</li>
-      <li>Zee (2010) - Quantum Field Theory</li>
-      <li>Weinberg (1972) - Gravitation and Cosmology</li>
+      <li>Misner, Thorne, & Wheeler (1973). Gravitation. W. H. Freeman.</li>
+      <li>Padmanabhan (1993). Structure Formation in the Universe.</li>
+      <li>Peebles (1993). Principles of Physical Cosmology.</li>
+      <li>Riess et al. (1998). The Astronomical Journal.</li>
+      <li>Verlinde (2017). SciPost Physics.</li>
+      <li>Zee (2010). Quantum Field Theory in a Nutshell.</li>
+      <li>Weinberg (1972). Gravitation and Cosmology.</li>
     </ul>
 
-    <h2>١٢. الصور التوضيحية</h2>
-    <img src="images/internal-pressure.png" alt="الضغط الداخلي" />
-    <img src="images/cpc-layers.png" alt="طبقات الاحتواء" />
-    <img src="images/cpc-diagrams.png" alt="مخططات CPC" />
+    <h2>١١. الصور التوضيحية</h2>
+    <img src="images/internal-pressure.png" alt="الضغط الداخلي الكوني" />
+    <img src="images/cpc-layers.png" alt="طبقات الاحتواء الكوني" />
+    <img src="images/cpc-diagrams.png" alt="رسومات النظرية" />
     <img src="images/cosmic-balance.jpg" alt="توازن كوني" />
-    <img src="images/quantum-vacuum.jpg" alt="فراغ كمومي" />
-    <img src="images/universe-structure.jpg" alt="هيكل الكون" />
+    <img src="images/quantum-vacuum.jpg" alt="ضغط الفراغ الكمومي" />
 
-    <p style="text-align:center; margin-top: 40px; font-weight: bold;">© 2025 عثمان مدني - جميع الحقوق محفوظة</p>
+    <p style="text-align: center; margin-top: 40px;">
+      © 2025 عثمان مدني — جميع الحقوق محفوظة
+    </p>
   </div>
 
   <footer>
-    <p>نظرية بديلة لفهم أعظم أسرار الكون</p>
+    <p>نظرية كونية بديلة لفهم أعظم أسرار الكون</p>
   </footer>
 </body>
 </html>
